--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <td><img src="1622370603916-modified.png" alt="Anup's profile picture"></td>
       <td><h1>Anup Gupta</h1>
         <p><em>I'm a student doing <strong><a href="https://www.linkedin.com/in/anuup22">Bachelor of Technology in Computer Engineering</a></strong> from SPPU.</em></p>
-        <p>I'm intrested in learning WebD. I ❤ playing Badminton.</p></td>
+        <p>I'm intrested in learning WebD. I ❤ playing Cricket.</p></td>
     </tr>
   </table>
   
@@ -39,11 +39,11 @@
   <tbody>
     <tr>
       <td>10-12 am</td>
-      <td>So ja</td>
+      <td>sleep</td>
     </tr>
     <tr>
       <td>07-08 pm</td>
-      <td>Dhyan de</td>
+      <td>chill</td>
     </tr>
   </tbody>
  </table>
