--- a/index.html
+++ b/index.html
@@ -4,18 +4,22 @@
 <head>
   <meta charset="utf-8">
   <title>Anup's Personal Site</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
   <table cellspacing="20">
     <tr>
       <td><img src="1622370603916-modified.png" alt="Anup's profile picture"></td>
-      <td><h1>Anup Gupta</h1>
-        <p><em>I'm a student doing <strong><a href="https://www.linkedin.com/in/anuup22">Bachelor of Technology in Computer Engineering</a></strong> from SPPU.</em></p>
-        <p>I'm intrested in learning WebD. I ❤ playing Cricket.</p></td>
+      <td>
+        <h1>Anup Gupta</h1>
+        <p><em>I'm a student doing <strong><a href="https://www.linkedin.com/in/anuup22">Bachelor of Technology in
+                Computer Engineering</a></strong> from SPPU.</em></p>
+        <p>I'm intrested in learning WebD. I ❤ playing Badminton.</p>
+      </td>
     </tr>
   </table>
-  
+
   <hr>
   <h3>Education Qualifications</h3>
   <ul>
@@ -23,30 +27,34 @@
     <li>12th from Mithibai College (Mumbai)</li>
     <li>Pursuing B.Tech. from G.H. Raisoni College of Engg & Mang (Pune)</li>
   </ul>
+  <hr>
   <h3>My Hobbies</h3>
   <ol>
     <li>travelling</li>
     <li>playing games</li>
   </ol>
- <h3>Example of HTML Table</h3>
- <table> 
-  <thead>
-    <tr>
-      <th>Time</th>
-      <th>Task</th>
-    </tr>
-  </thead>
-  <tbody>
-    <tr>
-      <td>10-12 am</td>
-      <td>sleep</td>
-    </tr>
-    <tr>
-      <td>07-08 pm</td>
-      <td>chill</td>
-    </tr>
-  </tbody>
- </table>
+  <hr>
+  <h3>Example of HTML Table</h3>
+  <table>
+    <thead>
+      <tr>
+        <th>Time</th>
+        <th>Task</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <td>10-12 am</td>
+        <td>So ja</td>
+      </tr>
+      <tr>
+        <td>07-08 pm</td>
+        <td>Dhyan de</td>
+      </tr>
+    </tbody>
+  </table>
+  <hr>
+  <p><strong><a href="contactme.html">Contact me</a></strong></p>
 </body>
 
 </html>
